# AxiomaticDeepVoting

./: .gitignore  AxiomaticDeepVoting.md  DEPRECATED_ax_deep_voting.yml  Experiments.ipynb  README.md  Table1-CNN.py  Table1.ipynb  Table1.py  environment.portable.yml  exp1.py  exp2.py  exp3.py  pyproject.toml  train_and_eval.py  wandb_integration.py
WP1/: table3.py
WP1/results_table3_2026-05-02_19-00-59/: results.json
reproductions/figure4/: Figure4.ipynb
reproductions/table1/: Table1-CNN.py  Table1.ipynb  Table1.py
reproductions/table3/: table3.py
results/exp1/CNN/exp1_2026-05-03_03-43-27_Plurality_IC/: results.json
results/exp1/CNN/exp1_2026-05-03_05-12-45_Borda_IC/: results.json
results/exp1/CNN/exp1_2026-05-03_06-44-24_Copeland_IC/: results.json
results/exp1/MLP/exp1_2026-01-09_00-48-54_Plurality_IC/: results.json
results/exp1/MLP/exp1_2026-01-09_00-49-03_Borda_IC/: results.json
results/exp1/MLP/exp1_2026-01-09_00-49-09_Copeland_IC/: results.json
results/exp1/MLP/exp1_2026-04-15_13-29-56_Plurality_IC/: results.json
results/exp1/MLP/exp1_2026-04-15_13-30-09_Borda_IC/: results.json
results/exp1/MLP/exp1_2026-04-15_13-30-20_Copeland_IC/: results.json
results/exp1/MLP/exp1_2026-04-15_13-34-59_Plurality_IC/: results.json
results/exp1/MLP/exp1_2026-04-15_13-35-56_Borda_IC/: results.json
results/exp1/MLP/exp1_2026-04-15_13-37-06_Copeland_IC/: results.json
results/exp1/MLP/exp1_2026-04-15_13-43-15_Plurality_IC/: results.json
results/exp1/MLP/exp1_2026-04-15_13-43-49_Plurality_IC/: results.json
results/exp1/MLP/exp1_2026-04-15_13-44-58_Plurality_IC/: results.json
results/exp1/MLP/exp1_2026-04-15_13-45-09_Borda_IC/: results.json
results/exp1/MLP/exp1_2026-04-15_13-45-19_Copeland_IC/: results.json
results/exp1/MLP/exp1_2026-04-15_14-14-35_Borda_IC/: results.json
transformers/: exp3_settransformer_v3.py  run_exp3_settransformer_v3.py  set_transformer_models_v3.py
typings/gensim/: __init__.pyi
typings/gensim/models/: __init__.pyi
typings/pref_voting/: __init__.pyi  _rules.pyi  c1_methods.pyi  combined_methods.pyi  generate_profiles.pyi  iterative_methods.pyi  margin_based_methods.pyi  other_methods.pyi  profiles.pyi  scoring_methods.pyi
(+25 files in other folders)
